--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,23 @@
-<p>big-card works!</p>
+<div class="container_big_card">
+
+    <div class="big_card__photo">
+        <img src="{{ photoCover }}" alt="" height="200px" srcset="">
+    </div>
+
+    <div class="big-card__title">
+        <h1>
+            <a [routerLink]="['content', Id]">
+                {{ cardTitle }}
+            </a>
+        </h1>
+    </div>
+
+    <div class="big-card__description">
+        <p>
+            <a [routerLink]="['content', Id]">
+                {{ cardDescription }}
+            </a>
+        </p>
+    </div>
+
+</div>
