--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,25 @@
-<p>menu-bar works!</p>
+<div class="container_menu_bar">
+    <ul>
+        <li>
+            <a href="https://www.linkedin.com/in/jaqueline-silva-broccolo/">
+                Linkedin
+            </a>
+        </li>
+        <li>
+            <span>•</span>
+        </li>
+        <li>
+            <a href="https://github.com/JaqueBRSilva">
+                GitHub
+            </a>
+        </li>
+        <li>
+            <span>•</span>
+        </li>
+        <li>
+            <a href="https://bio.link/jaquebrsilva">
+                Bio.link
+            </a>
+        </li>
+    </ul>
+</div>
