--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,10 +1,10 @@
 <div class="container_big_card">
 
-    <div class="big_card__photo">
+    <div class="big_card_photo">
         <img src="{{ photoCover }}" alt="" height="200px" srcset="">
     </div>
 
-    <div class="big-card__title">
+    <div class="big_card_title">
         <h1>
             <a [routerLink]="['content', Id]">
                 {{ cardTitle }}
@@ -12,7 +12,7 @@
         </h1>
     </div>
 
-    <div class="big-card__description">
+    <div class="big_card_description">
         <p>
             <a [routerLink]="['content', Id]">
                 {{ cardDescription }}
